# data-forensics-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data_forensics_auditor/: __init__.py  auditor.py  cli.py  io.py  manifest.py  models.py
examples/: shape_a_acceptance_manifest.yaml
scripts/: inspect_distribution.py
tests/: smoke_ignore_role.py  smoke_input_hard_fail.py  smoke_shape_c.py  test_cli.py  test_distribution_inspector.py  test_thresholds.py
