[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-forensics-auditor"
version = "0.2.1"
description = "Offline data-forensics auditor for tabular process datasets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openpyxl>=3.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/willingram/data-forensics-auditor"
Repository = "https://github.com/willingram/data-forensics-auditor"
Issues = "https://github.com/willingram/data-forensics-auditor/issues"
Changelog = "https://github.com/willingram/data-forensics-auditor/blob/main/CHANGELOG.md"

[project.scripts]
dfa = "data_forensics_auditor.cli:main"
data-forensics-auditor = "data_forensics_auditor.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
  "twine>=6",
]

[tool.setuptools.packages.find]
include = ["data_forensics_auditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
